--- a/Florecia.Pereyra.TP7.css
+++ b/Florecia.Pereyra.TP7.css
@@ -1,32 +1,103 @@
 body {
   width: 100%;
   background-color: rgb(255, 227, 179);
-  font-family: sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.menu1 {
-  list-style: none;
-  padding: 10px;
+header {
   background-color: rgb(223, 88, 55);
-  width: 100%;
+  display: flex;
+  align-items: center;
+  height: 100px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+header img {
+  height: 100px;
+  width: auto;
+  float: left;
+}
+
+header img:hover {
+  transform: scale(1.2);
+}
+
+.ListaNav {
+  width: 90%;
   display: flex;
   justify-content: space-between;
-
-}
-img{
-  width: 80px;
 }
 
-.menu1 li a {
-  text-decoration: none;
-  color: aliceblue;
-  padding: 10px;
-}
-.menu1 li{
+ul {
   display: inline-block;
-  text-align: center;
-  
+  list-style-type: none;
 }
-.menu1 li a:hover{
-  background-color:rgb(200,200,55);
+
+li {
+  margin-right: 10px;
+  display: inline-block;
+}
+
+.seccion1 {
+  width: 820px;
+  background-color: aliceblue;
+  padding: 1rem;
+}
+
+.seccion1 img {
+  height: 250px;
+  width: 250px;
+}
+
+.plato1 {
+  width: 380px;
+  margin: 10 10 10 20;
+  display: inline-block;
+}
+
+.plato2 {
+  width: 380px;
+  margin: 10 10 10 20;
+  display: inline-block;
+}
+
+.plato3 {
+  width: 380px;
+  margin: 10 10 10 20;
+  display: inline-block;
+}
+
+.plato4 {
+  width: 380px;
+  margin: 10 10 10 20;
+  display: inline-block;
+}
+
+button {
+  background-color: red;
+  margin: 1rem;
+  border-radius: 12px;
+
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.img2 {
+  float: right;
+}
+
+footer{
+  width: 100%;
+  height: 80px;
+  background-color:rgb(223, 88, 55);
+  top: 760px;
+  text-align: center;
+  padding: .5rem;
+}
+.texto2{
+  color: aliceblue;
 }
